syntax = "proto3";

package scenarigo.testdata.test;

service Test {
    rpc Echo(EchoRequest) returns (EchoResponse) {};
}

message EchoRequest {
    string message_id = 1;
    string message_body = 2;
}

message EchoResponse {
    string message_id = 1;
    string message_body = 2;
}
